lab1/Test/L1-A-12-78.output
Error Type B at Line 18
Error Type A at Line 19
Error Type B at Line 27
Error Type A at Line 29
Error Type B at Line 33
Error Type A at Line 54
